--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,44 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-  }
-  
-  .title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #007ACC;
-    color: #fff;
-  }
-  
-  .logo {
-    text-align: center;
-  }
-  
-  .logo img {
-    width: 200px; /* Adjust the size as needed */
-  }
-  
-  .details {
-    padding: 20px;
-  }
-  
-  .centered-content {
-    text-align: center;
-    max-width: 80%;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    overflow-y: auto;
-    height: 200px; /* Adjust the height as needed */
-    color: #333;
-  }
-  
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 20px;
+  background-color: #007ACC;
+  color: #fff;
+}
+
+.logo img {
+  width: 400px;
+  height: 400px;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.name {
+  align-self: flex-end;
+  order: 1; /* Adjust order property to place it at the top right corner */
+}
+
+.centered-content {
+  text-align: center;
+  max-width: 80%;
+  margin: auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  overflow-y: auto;
+  height: 200px; /* Adjust the height as needed */
+  color: #333;
+}
